--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4          36       18.52    scattered clouds  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "40          75        5.75       broken clouds  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -601,7 +601,7 @@
        "40             "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "40                       Casa Tia Villa  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "43                         SanBiz Lodge  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1083,227 +1083,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean_hotel_df.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 7. Drop the rows where there is no Hotel Name.\n",
-    "import numpy as np\n",
-    "hotel_df.dropna(subset = [\"Hotel Name\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Current Description</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Hotel Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Albany</td>\n",
-       "      <td>US</td>\n",
-       "      <td>79.74</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>42.6001</td>\n",
-       "      <td>-73.9662</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Cayenne</td>\n",
-       "      <td>GF</td>\n",
-       "      <td>75.24</td>\n",
-       "      <td>moderate rain</td>\n",
-       "      <td>4.9333</td>\n",
-       "      <td>-52.3333</td>\n",
-       "      <td>Hôtel Le Dronmi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Kapaa</td>\n",
-       "      <td>US</td>\n",
-       "      <td>79.12</td>\n",
-       "      <td>scattered clouds</td>\n",
-       "      <td>22.0752</td>\n",
-       "      <td>-159.3190</td>\n",
-       "      <td>Sheraton Kauai Coconut Beach Resort</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Butaritari</td>\n",
-       "      <td>KI</td>\n",
-       "      <td>81.46</td>\n",
-       "      <td>few clouds</td>\n",
-       "      <td>3.0707</td>\n",
-       "      <td>172.7902</td>\n",
-       "      <td>Isles Sunset Lodge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Hilo</td>\n",
-       "      <td>US</td>\n",
-       "      <td>81.63</td>\n",
-       "      <td>few clouds</td>\n",
-       "      <td>19.7297</td>\n",
-       "      <td>-155.0900</td>\n",
-       "      <td>Hilo Hawaiian Hotel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>San Policarpo</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>81.16</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>12.1791</td>\n",
-       "      <td>125.5072</td>\n",
-       "      <td>Agapita M. Nicart</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Nicoya</td>\n",
-       "      <td>CR</td>\n",
-       "      <td>82.29</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>10.1483</td>\n",
-       "      <td>-85.4520</td>\n",
-       "      <td>Las Cabinas Del Sueño</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Houma</td>\n",
-       "      <td>US</td>\n",
-       "      <td>89.60</td>\n",
-       "      <td>scattered clouds</td>\n",
-       "      <td>29.5958</td>\n",
-       "      <td>-90.7195</td>\n",
-       "      <td>Courtyard by Marriott Houma</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Labrea</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>86.59</td>\n",
-       "      <td>scattered clouds</td>\n",
-       "      <td>-7.2586</td>\n",
-       "      <td>-64.7981</td>\n",
-       "      <td>Hotel Novo Horizonte</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>Bambous Virieux</td>\n",
-       "      <td>MU</td>\n",
-       "      <td>76.21</td>\n",
-       "      <td>broken clouds</td>\n",
-       "      <td>-20.3428</td>\n",
-       "      <td>57.7575</td>\n",
-       "      <td>Casa Tia Villa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               City Country  Max Temp Current Description      Lat       Lng  \\\n",
-       "2            Albany      US     79.74     overcast clouds  42.6001  -73.9662   \n",
-       "12          Cayenne      GF     75.24       moderate rain   4.9333  -52.3333   \n",
-       "14            Kapaa      US     79.12    scattered clouds  22.0752 -159.3190   \n",
-       "15       Butaritari      KI     81.46          few clouds   3.0707  172.7902   \n",
-       "21             Hilo      US     81.63          few clouds  19.7297 -155.0900   \n",
-       "23    San Policarpo      PH     81.16     overcast clouds  12.1791  125.5072   \n",
-       "25           Nicoya      CR     82.29     overcast clouds  10.1483  -85.4520   \n",
-       "26            Houma      US     89.60    scattered clouds  29.5958  -90.7195   \n",
-       "35           Labrea      BR     86.59    scattered clouds  -7.2586  -64.7981   \n",
-       "40  Bambous Virieux      MU     76.21       broken clouds -20.3428   57.7575   \n",
-       "\n",
-       "                             Hotel Name  \n",
-       "2                                        \n",
-       "12                      Hôtel Le Dronmi  \n",
-       "14  Sheraton Kauai Coconut Beach Resort  \n",
-       "15                   Isles Sunset Lodge  \n",
-       "21                  Hilo Hawaiian Hotel  \n",
-       "23                    Agapita M. Nicart  \n",
-       "25                Las Cabinas Del Sueño  \n",
-       "26          Courtyard by Marriott Houma  \n",
-       "35                 Hotel Novo Horizonte  \n",
-       "40                       Casa Tia Villa  "
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hotel_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "City                   210\n",
-       "Country                210\n",
-       "Max Temp               210\n",
-       "Current Description    210\n",
-       "Lat                    210\n",
-       "Lng                    210\n",
-       "Hotel Name             210\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Figure out why dataframe still includes empty value\n",
-    "hotel_df.count()"
    ]
   },
   {
@@ -1327,31 +1113,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9. Using the template add city name, the country code, the weather description and maximum temperature for the city.\n",
-    "info_box_template = \"\"\"\n",
-    "\n",
+    "info_box_template = info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Description</dt><dd>{Current Description}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
+    "\n",
     "\n",
     "# 10a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
     "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
     "\n",
     "# 10b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]"
+    "locations_df = clean_hotel_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>4.9333</td>\n",
+       "      <td>-52.3333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>22.0752</td>\n",
+       "      <td>-159.3190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>3.0707</td>\n",
+       "      <td>172.7902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>19.7297</td>\n",
+       "      <td>-155.0900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>12.1791</td>\n",
+       "      <td>125.5072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>10.1483</td>\n",
+       "      <td>-85.4520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>29.5958</td>\n",
+       "      <td>-90.7195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>-7.2586</td>\n",
+       "      <td>-64.7981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>-20.3428</td>\n",
+       "      <td>57.7575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>-10.4544</td>\n",
+       "      <td>161.9205</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Lat       Lng\n",
+       "12   4.9333  -52.3333\n",
+       "14  22.0752 -159.3190\n",
+       "15   3.0707  172.7902\n",
+       "21  19.7297 -155.0900\n",
+       "23  12.1791  125.5072\n",
+       "25  10.1483  -85.4520\n",
+       "26  29.5958  -90.7195\n",
+       "35  -7.2586  -64.7981\n",
+       "40 -20.3428   57.7575\n",
+       "43 -10.4544  161.9205"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locations_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ecde80159b82406298f39a0d912ce01b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
+    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = clean_hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
-    "# 11b. Display the figure\n"
+    "# 11b. Display the figure\n",
+    "fig"
    ]
   },
   {
