--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0944524b",
+   "id": "5028706a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc84fa5c",
+   "id": "a71691e1",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "64762f06",
+   "id": "b0568d28",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0387cee8",
+   "id": "9e9f96f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "111172b2",
+   "id": "5a06b5c1",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9ed9198a",
+   "id": "77246633",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a669a37c",
+   "id": "414db605",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dd29b536",
+   "id": "e4064b00",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "abbef454",
+   "id": "397f361d",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7e1e9c0b",
+   "id": "0602c0a9",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8b114e05",
+   "id": "68a3e4ba",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "22f5865a",
+   "id": "95c157ba",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "36534667",
+   "id": "df6734a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b28fe32a",
+   "id": "a27d71db",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c193ae31",
+   "id": "564b478b",
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b6c27655",
+   "id": "58d36104",
    "metadata": {},
    "outputs": [
     {
@@ -962,12 +962,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c83d82c",
+   "execution_count": 31,
+   "id": "d845da55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create info box\n",
+    "# Create popup box for each marker\n",
     "info_box_template = \"\"\"\n",
     "<dl>\n",
     "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
@@ -975,8 +975,54 @@
     "<dt>Country</dt><dd>{Country}</dd>\n",
     "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
     "</dl>\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "# Store the DataFrame Row.\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "fd0d0630",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7cb5815cb514c2cba4f72a30212f4f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Add a heatmap of temperature for the vacation spots and a pop-up marker for each city.\n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37706e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
