Refactor code for trip itinerary figure.

--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "9  161.9205                         SanBiz Lodge  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "43       161.9205                         SanBiz Lodge  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -434,7 +434,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37ae9664d38645f08a655a31d4541095",
+       "model_id": "38a9bd58c0234af9872d9cee3fe5dc2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "672      hotel castilla  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "330      Hotel Restaurante Bagoeira  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "276      Casa Maquia  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "545      Arribas Sintra Hotel  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
        "672      hotel castilla  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,51 +881,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "### NEED HELP WITH LIST INDEXING TO AVOID MAGIC NUMBERS###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([38.7992, -9.4469], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = vacation_start[[\"Lat\", \"Lng\"]].to_numpy()\n",
-    "end = vacation_end[[\"Lat\",\"Lng\"]].to_numpy()\n",
-    "stop1 = vacation_stop1[[\"Lat\",\"Lng\"]].to_numpy()\n",
-    "stop2 = vacation_stop2[[\"Lat\",\"Lng\"]].to_numpy()\n",
-    "stop3 = vacation_stop3[[\"Lat\",\"Lng\"]].to_numpy()"
+    "start = vacation_start.to_numpy()[[0],[4, 5]]\n",
+    "end = vacation_end.to_numpy()[[0],[4, 5]]\n",
+    "stop1 = vacation_stop1.to_numpy()[[0],[4, 5]]\n",
+    "stop2 = vacation_stop2.to_numpy()[[0],[4, 5]]\n",
+    "stop3 = vacation_stop3.to_numpy()[[0],[4, 5]]\n",
+    "stop3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -933,7 +915,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "164162725edf4b65b0a2abc04057fdd9",
+       "model_id": "8aa73451a89848e7b71346a96a163931",
        "version_major": 2,
        "version_minor": 0
       },
@@ -951,14 +933,9 @@
     "import gmaps.datasets\n",
     "gmaps.configure(api_key=g_key)\n",
     "\n",
-    "Tarancon = [40.0085, -3.0073]\n",
-    "Barcelos = [41.5388, -8.6151]\n",
-    "Lata = [40.1629, -8.3327]\n",
-    "Colares = [38.7992, -9.4469]\n",
-    "\n",
     "fig = gmaps.figure()\n",
     "travel_itinerary = gmaps.directions_layer(\n",
-    "        Tarancon, Tarancon, waypoints=[Barcelos, Lata, Colares],\n",
+    "       start, end, waypoints=[stop1, stop2, stop3],\n",
     "        travel_mode='DRIVING')\n",
     "fig.add_layer(travel_itinerary)\n",
     "fig\n"
@@ -966,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1047,7 @@
        "4              hotel castilla  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,13 +1084,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fe7ec469add4acc839972b89cfa8338",
+       "model_id": "9fe3192df6c649d182fe34b331990768",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1148,10 +1125,11 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
